force-app/main/default/objects/Asset/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <label>인수일(보증 기산)</label>
    <type>Date</type>
</CustomField>