force-app/main/default/objects/Asset/fields/Applied_Revision__c.field-meta.xml
<CustomField>
    <fullName>Applied_Revision__c</fullName>
    <label>적용 설계버전</label>
    <description>현장에 실제 적용된 설계 리비전(예: Rev.B). 변경요청 적용완료 시 원본 CR의 리비전 번호로 자동 갱신된다.</description>
    <inlineHelpText>이 호기에 현재 적용된 설계 리비전입니다. 'Rev.A' 형태로 표시되며, 변경 적용 완료 시 자동으로 갱신됩니다.</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>