force-app/main/default/objects/Asset/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>중요도</label>
    <description>Asset이 냉각 계통에서 차지하는 중요도. 출동 브리핑의 Priority 산정에서 "Asset 중요도" 인자로 사용한다(핵심&gt;중요&gt;일반).</description>
    <inlineHelpText>이 장비가 냉각 계통에서 차지하는 중요도를 선택하세요(핵심/중요/일반).</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>핵심</fullName>
            </value>
            <value>
                <fullName>중요</fullName>
            </value>
            <value>
                <fullName>일반</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>