force-app/main/default/objects/Asset/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>정비 주기. Asset_Next_Inspection_Date_Calc Flow가 이 값을 읽어 Next_Inspection_Date__c를 계산한다 — 이 필드는 인수 확정 전에 이미 세팅돼 있다는 전제(Flow가 기본값을 정하지 않음).</description>
    <label>정비 주기</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>월 1회</fullName>
            </value>
            <value>
                <fullName>분기 1회</fullName>
            </value>
            <value>
                <fullName>반기 1회</fullName>
            </value>
            <value>
                <fullName>연 1회</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>