force-app/main/default/objects/Asset/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>가장 최근 예방정비가 실행된 날짜. Preventive_Maintenance_WO_Scheduler Flow가 예방정비 WO를 생성할 때 실행일(오늘)을 기입한다.</description>
    <inlineHelpText>가장 최근 예방정비 실행일. 예방정비 WO 자동 생성 시 시스템이 기록한다.</inlineHelpText>
    <label>최근 점검일</label>
    <type>Date</type>
</CustomField>