force-app/main/default/objects/Asset/fields/Latest_Trend_Flag__c.field-meta.xml
<CustomField>
    <fullName>Latest_Trend_Flag__c</fullName>
    <label>최신 추세 플래그</label>
    <description>WorkOrderLineItem.Trend_Flag__c의 최신값을 이 Asset으로 복사한 요약 필드(T5-07). 고객 포털은 WorkOrderLineItem을 직접 조회할 권한을 라이선스 제약으로 못 받아서(2026-08-30 확인 — Guest든 로그인 포털 유저든 org 전체에서 WorkOrderLineItem에 명시적 ObjectPermissions를 못 줌), 대신 이 요약 필드를 통해 최신 상태를 본다. T5_Sync_Asset_Trend_Summary Flow(WorkOrderLineItem 저장 후 트리거)가 자동 갱신하며, 사람이 직접 입력하지 않는다.</description>
    <inlineHelpText>최근 점검의 추세 판정 결과입니다. 자동 계산되며 직접 입력하지 않습니다.</inlineHelpText>
    <length>20</length>
    <type>Text</type>
</CustomField>