force-app/main/default/objects/Asset/fields/Maintenance_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>정비 활성화</label>
    <type>Checkbox</type>
</CustomField>