force-app/main/default/objects/Asset/fields/Next_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Date__c</fullName>
    <description>Service_Ready_Date__c(=인수일)에 Frequency__c를 환산일수로 더한 값. O1의 예방정비 자동 생성이 이 날짜를 읽는다.</description>
    <label>다음 점검일</label>
    <type>Date</type>
</CustomField>