force-app/main/default/objects/Asset/fields/Open_Items_Summary__c.field-meta.xml
<CustomField>
    <fullName>Open_Items_Summary__c</fullName>
    <description>이 Asset(호기)에 연결된 미조치(Open+조치중) Punch 개수. Asset↔WorkOrderLineItem이 Lookup 관계라 Roll-Up Summary를 못 써서, WOLI_Asset_Open_Punch_Recalc Flow가 WOLI 생성·수정 시마다 재계산해 이 필드를 갱신한다.</description>
    <label>미조치 항목 집계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>