force-app/main/default/objects/Asset/fields/Service_Ready_Acceptor__c.field-meta.xml
<CustomField>
    <fullName>Service_Ready_Acceptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>서비스 준비 수락자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Ready Assets</relationshipLabel>
    <relationshipName>Service_Ready_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>