force-app/main/default/objects/Asset/fields/Service_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Ready_Date__c</fullName>
    <label>서비스 준비일</label>
    <type>Date</type>
</CustomField>