force-app/main/default/objects/Asset/fields/Service_Ready_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Ready_Status__c</fullName>
    <label>서비스 준비 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미준비</fullName>
                <default>true</default>
                <label>미준비</label>
            </value>
            <value>
                <fullName>조건부</fullName>
            </value>
            <value>
                <fullName>준비완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>