force-app/main/default/objects/Asset/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>보증 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기본보증</fullName>
                <default>true</default>
                <label>기본보증</label>
            </value>
            <value>
                <fullName>연장보증</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>무보증</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>