force-app/main/default/objects/Asset/listViews/Active_Assets.listView-meta.xml
<ListView>
    <fullName>Active_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.ACCOUNT_ID</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>설치완료,운영중</value>
    </filters>
    <label>활성 자산</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>