force-app/main/default/objects/Asset/listViews/Warranty_Expiring.listView-meta.xml
<ListView>
    <fullName>Warranty_Expiring</fullName>
    <filterScope>Everything</filterScope>
    <label>보증 만료 예정 자산</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>